--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "morgan": "^1.9.0",
     "node-geocoder": "^3.27.0",
     "node-sass-middleware": "^0.11.0",
+    "react-geolocated": "^3.1.0",
     "serve-favicon": "^2.5.0"
   },
   "devDependencies": {
