--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "node-geocoder": "^3.27.0",
     "node-sass-middleware": "^0.11.0",
     "react-geolocated": "^3.1.0",
-    "serve-favicon": "^2.5.0"
+    "serve-favicon": "^2.5.0",
+    "use-position": "0.0.8"
   },
   "devDependencies": {
     "nodemon": "^1.12.1"
