--- a/package.json
+++ b/package.json
@@ -8,15 +8,19 @@
     "dev-windows": "nodemon ./bin/www"
   },
   "dependencies": {
+    "@reach/combobox": "^0.11.2",
+    "@react-google-maps/api": "^1.13.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
     "colors": "^1.4.0",
     "connect-mongo": "^3.2.0",
     "cookie-parser": "^1.4.3",
     "cors": "^2.8.5",
+    "date-fns": "^2.16.1",
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
     "express-session": "^1.17.1",
+    "google-maps-react": "^2.0.6",
     "hbs": "^4.0.1",
     "mongoose": "^5.2.10",
     "morgan": "^1.9.0",
@@ -24,6 +28,7 @@
     "node-sass-middleware": "^0.11.0",
     "react-geolocated": "^3.1.0",
     "serve-favicon": "^2.5.0",
+    "use-places-autocomplete": "^1.6.0",
     "use-position": "0.0.8"
   },
   "devDependencies": {
