--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@react-google-maps/api": "^1.13.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
+    "bootstrap": "^4.5.3",
     "colors": "^1.4.0",
     "connect-mongo": "^3.2.0",
     "cookie-parser": "^1.4.3",
