--- a/package.json
+++ b/package.json
@@ -23,12 +23,11 @@
     "express-session": "^1.17.1",
     "google-maps-react": "^2.0.6",
     "hbs": "^4.0.1",
-    "moment": "^2.29.1",
     "mongoose": "^5.2.10",
     "morgan": "^1.9.0",
     "node-geocoder": "^3.27.0",
     "node-sass-middleware": "^0.11.0",
-    "react-datetime": "^3.0.4",
+    "react-calendar": "^3.2.1",
     "react-geolocated": "^3.1.0",
     "serve-favicon": "^2.5.0",
     "use-places-autocomplete": "^1.6.0",
