--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "node-geocoder": "^3.27.0",
     "node-sass-middleware": "^0.11.0",
     "react-datetime": "^3.0.4",
+    "react-dom": "^17.0.1",
     "react-geolocated": "^3.1.0",
     "serve-favicon": "^2.5.0",
     "use-places-autocomplete": "^1.6.0",
