--- a/package.json
+++ b/package.json
@@ -27,10 +27,12 @@
     "morgan": "^1.9.0",
     "node-geocoder": "^3.27.0",
     "node-sass-middleware": "^0.11.0",
+    "react-calendar": "^3.2.1",
     "react-datetime": "^3.0.4",
     "react-dom": "^17.0.1",
-    "react-calendar": "^3.2.1",
     "react-geolocated": "^3.1.0",
+    "react-google-places-autocomplete": "^3.0.0",
+    "react-places-autocomplete": "^7.3.0",
     "serve-favicon": "^2.5.0",
     "use-places-autocomplete": "^1.6.0",
     "use-position": "0.0.8"
