--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "start": "node ./bin/www",
     "dev": "DEBUG=localib:* nodemon --ignore client ./bin/www",
-    "dev-windows": "nodemon ./bin/www"
+    "dev-windows": "nodemon ./bin/www",
+    "build": "cd client && npm install && npm run build"
   },
   "dependencies": {
     "@reach/combobox": "^0.11.2",
